--- a/index.html
+++ b/index.html
@@ -3,29 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <title>John Sylvain | Resume</title>
+  <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css' />
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
   <div class="container">
-
-    <div id="console">
-      <ul id="commands"></ul>
-      <form id="command-prompt">
-        <div class="command-prompt-container">
-          $ <input type="text" name="prompt" autocomplete="off"/>
+    <header>
+      <h1>John Sylvain<span></span></h1>
+      <p>Web Developer and Designer</p>
+    </header>
+    <div class="grid">
+      <div class="col-1-3">
+        <div id="console-wrapper">
+          <div class="menu-bar clearfix">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+          <div id="console">
+            <ul id="commands"></ul>
+            <form id="command-prompt">
+              <div class="command-prompt-container">
+                $ <input type="text" name="prompt" id="command-input" autocomplete="off"/>
+              </div>
+            </form>
+          </div>
         </div>
-      </form>
-    </div>
-    <div id="resume-wrapper">
-      <div id="resume-menu-bar" class="clearfix">
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
       </div>
-      <div id="resume-content">
-      <pre id="resume-code">
-        
-      </pre>
+      <div class="col-2-3">
+        <div id="resume-wrapper">
+          <div class="menu-bar clearfix">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+          <div id="resume-content">
+            <pre id="resume-code">
+            </pre>
+          </div>
+        </div>
       </div>
     </div>
   </div>
