--- a/index.html
+++ b/index.html
@@ -4,47 +4,48 @@
   <meta charset="UTF-8">
   <title>John Sylvain | Resume</title>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css' />
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>John Sylvain<span></span></h1>
-      <p>Web Developer and Designer</p>
-    </header>
-    <div class="grid">
-      <div class="col-1-3">
-        <div id="console-wrapper">
-          <div class="menu-bar clearfix">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-          <div id="console">
-            <ul id="commands"></ul>
-            <form id="command-prompt">
-              <div class="command-prompt-container">
-                $ <input type="text" name="prompt" id="command-input" autocomplete="off"/>
-              </div>
-            </form>
-          </div>
+
+
+
+  <div id="console-wrapper">
+    <div id="console">
+      <ul id="commands"></ul>
+      <form id="command-prompt">
+        <div class="command-prompt-container">
+          $ <input type="text" name="prompt" id="command-input" autocomplete="off"/>
         </div>
-      </div>
-      <div class="col-2-3">
-        <div id="resume-wrapper">
-          <div class="menu-bar clearfix">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-          </div>
-          <div id="resume-content">
-            <pre id="resume-code">
-            </pre>
-          </div>
-        </div>
-      </div>
+      </form>
     </div>
   </div>
+
+  <div id="page-wrap">
+    <div class="container">
+      <header>
+        <h1>John Sylvain<span></span></h1>
+        <p>Web Developer and Designer</p>
+      </header>
+      <div id="resume-wrapper">
+        <div class="menu-bar clearfix">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <span><span id="file-name"></span>.json</span>
+        </div>
+        <div id="resume-content">
+          <pre id="resume-code">
+          </pre>
+        </div>
+      </div>
+      <footer>
+        John Sylvain &copy; 2016
+      </footer>
+    </div>
+  </div>
+
   <script src="./js/app.js"></script>
 </body>
 </html>
