--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,18 @@
 										</div>
 										<div class="col-1-2">
 											<div class="project">
+												<img src="./img/jslinkv2.svg" alt=""/>
+												<div class="caption">
+													<h3>Personal URL Shortener</h3>
+													<p class="description">This custom URL shortener generates more memorable links for frequented websites. Created with Express, React, and Redux.</p>
+													<p class="links">
+														<a href="http://github.com/johnsylvain/url-shortener-node/" target="_blank">GitHub</a>
+													</p>
+												</div>
+											</div>
+										</div>
+										<div class="col-1-2">
+											<div class="project">
 												<img src="./img/reddittv3.svg" alt=""/>
 												<div class="caption">
 													<h3>Reddit TV</h3>
