use parcel to bundle site

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <meta name="description" content="My name is John Sylvain and I love to develop websites that are aesthetically pleasing and technically balanced.">
   <meta name="keywords" content="John Sylvain, web development,html,css,javascript,web design,purdue,angular,nodejs,react,redux,fullstack,front end">
   <meta name="author" content="John Sylvain">
-  <link rel="stylesheet" href="./css/style.css"/>
-  <link rel="icon" href="/favicon.png" />
+  <link rel="icon" href="favicon.png" />
 </head>
 <body>
   <div id="page">
@@ -47,8 +46,8 @@
               <div class="section about">
                 <h2>About</h2>
                 <p>I am a Software Engineer at <a href="https://rocketmiles.com">Rocketmiles</a> and a recent graduate of Purdue University. In the past, I have worked for <a href="http://usaa.com" target="_blank">USAA</a> and <a href="http://blastradius.com" target="_blank">Blast Radius</a>. I design and develop web applications that are simple and fun to use.</p>
-                <p class="mobile-hide">If you would like to learn more about me and my experience, feel free to check out my <a href="#/resume" class="toggle-btn">interactive resume</a>, or download <a href="http://johnsylvain.me/resume.pdf" target="_blank">a PDF</a>.</p>
-                <p class="mobile-show">If you would like to learn more about me and my experience, feel free to check out my  <a href="http://johnsylvain.me/resume.pdf" target="_blank">resume</a>.</p>
+                <p class="mobile-hide">If you would like to learn more about me and my experience, feel free to check out my <a href="#/resume" class="toggle-btn">interactive resume</a>, or download <a href="resume.pdf" target="_blank">a PDF</a>.</p>
+                <p class="mobile-show">If you would like to learn more about me and my experience, feel free to check out my  <a href="resume.pdf" target="_blank">resume</a>.</p>
               </div>
               <div class="section">
                 <h2>Projects</h2>
@@ -124,7 +123,7 @@
             <div class="grid">
               <div class="col-1-2">
                 <p>
-                  &#0169; John Sylvain <span><script>document.write(new Date().getFullYear())</script></span> 
+                  &#0169; John Sylvain <span><script type="text/javascript">document.write(new Date().getFullYear())</script></span> 
                 </p>
               </div>
               <div class="col-1-2 align-right">
@@ -158,6 +157,6 @@
     ga('send', 'pageview');
   </script> 
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-  <script src="./js/bundle.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
