--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
             <div class="grid">
               <div class="col-1-2">
                 <p>
-                  &#0169; John Sylvain <span><script type="text/javascript">document.write(new Date().getFullYear())</script></span> 
+                  &#0169; John Sylvain <span id="date-selector"></span> <!-- JavaScript Selector -->
                 </p>
               </div>
               <div class="col-1-2 align-right">
