build dist and fix resume url

--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
               <div class="section about">
                 <h2>About</h2>
                 <p>I am a Software Engineer at <a href="https://rocketmiles.com">Rocketmiles</a> and a recent graduate of Purdue University. In the past, I have worked for <a href="http://usaa.com" target="_blank">USAA</a> and <a href="http://blastradius.com" target="_blank">Blast Radius</a>. I design and develop web applications that are simple and fun to use.</p>
-                <p class="mobile-hide">If you would like to learn more about me and my experience, feel free to check out my <a href="#/resume" class="toggle-btn">interactive resume</a>, or download <a href="resume.pdf" target="_blank">a PDF</a>.</p>
-                <p class="mobile-show">If you would like to learn more about me and my experience, feel free to check out my  <a href="resume.pdf" target="_blank">resume</a>.</p>
+                <p class="mobile-hide">If you would like to learn more about me and my experience, feel free to check out my <a href="#/resume" class="toggle-btn">interactive resume</a>, or download <a href="https://johnsylvain.me/resume.pdf" target="_blank">a PDF</a>.</p>
+                <p class="mobile-show">If you would like to learn more about me and my experience, feel free to check out my  <a href="https://johnsylvain.me/resume.pdf" target="_blank">resume</a>.</p>
               </div>
               <div class="section">
                 <h2>Projects</h2>
