--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <div id="page">
 
     <div id="wrapper">
-      <div id="console-selector"> <!-- JavaScript Selector -->
+      <div id="console-selector" class="nonInteractiveMode"> <!-- JavaScript Selector -->
         <div class="console">
           <div id="commands"></div> <!-- JavaScript Selector -->
           <form id="command-prompt-container"> <!-- JavaScript Selector -->
