render entire interactive resume with a vdom

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,6 @@
       <div id="console-selector" class="nonInteractiveMode"> <!-- JavaScript Selector -->
         <div class="console">
           <div id="commands"></div> <!-- JavaScript Selector -->
-          <form id="command-prompt-container"> <!-- JavaScript Selector -->
-            $ <input 
-              type="text" 
-              name="prompt" 
-              id="command-input" 
-              class="console__prompt" 
-              autocomplete="off"/>
-          </form>
         </div>
       </div>
 
@@ -100,24 +92,7 @@
                 </div>
               </div>
             </div>
-            <div id="resume-wrapper">
-              <div class="menu-bar clearfix">
-                <div class="menu-bar__circle"></div>
-                <div class="menu-bar__circle"></div>
-                <div class="menu-bar__circle"></div>
-                <span class="menu-bar__title">
-                  
-                  <!-- JavaScript Selector -->
-                  <span id="file-name"></span>.json
-                </span>
-              </div>
-              <div id="resume-content">
-
-                <!-- JavaScript Selector -->
-                <pre id="resume-code"></pre>
-
-              </div>
-            </div>
+            <div id="resume-wrapper"></div> <!-- JavaScript Selector -->
           </div>
           <footer>
             <div class="grid">
