fix google fonts

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="John Sylvain, web development,html,css,javascript,web design,purdue,angular,nodejs,react,redux,fullstack,front end">
   <meta name="author" content="John Sylvain">
   <link rel="icon" href="favicon.png" />
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Ubuntu+Mono:400,700" rel="stylesheet">
 </head>
 <body>
   <div id="page">
