performance updates to vdom and clean up assets

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="My name is John Sylvain and I love to develop websites that are aesthetically pleasing and technically balanced.">
   <meta name="keywords" content="John Sylvain, web development,html,css,javascript,web design,purdue,angular,nodejs,react,redux,fullstack,front end">
   <meta name="author" content="John Sylvain">
-  <link rel="icon" href="favicon.png" />
+  <link rel="icon" href="assets/favicon.png" />
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Ubuntu+Mono:400,700" rel="stylesheet">
 </head>
 <body>
@@ -48,7 +48,7 @@
                   <div class="grid">
                     <div class="col-1-2">
                       <div class="project">
-                        <img src="./img/mortyv2.svg" alt="" class="project__image"/>
+                        <img src="./assets/mortyv2.svg" alt="" class="project__image"/>
                         <div class="project__caption">
                           <h3 class="project__title">PlaceMorty</h3>
                           <p class="project__description">PlaceMorty provides quick access to placeholder images via AWS S3 storage, Redis caching, and an admin dashboard for curation.</p>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-1-2">
                       <div class="project">
-                        <img src="./img/pagine.svg" alt="" class="project__image"/>
+                        <img src="./assets/pagine.svg" alt="" class="project__image"/>
                         <div class="project__caption">
                           <h3 class="project__title">Pagine</h3>
                           <p class="project__description">Pagine is a system that makes it easy to generate websites directly in the browser with no need for compiling.</p>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="col-1-2">
                       <div class="project">
-                        <img src="./img/st-extensionv2.svg" alt="" class="project__image"/>
+                        <img src="./assets/st-extensionv2.svg" alt="" class="project__image"/>
                         <div class="project__caption">
                           <h3 class="project__title">Shower Thoughts Newtab</h3>
                           <p class="project__description">This Chrome Extension creates a fun newtab page, leveraging Chrome storage for caching reddit data and storing user options.</p>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="col-1-2">
                       <div class="project">
-                        <img src="./img/jslinkv3.svg" alt="" class="project__image"/>
+                        <img src="./assets/jslinkv3.svg" alt="" class="project__image"/>
                         <div class="project__caption">
                           <h3 class="project__title">Personal URL Shortener</h3>
                           <p class="project__description">This MERN webapp generates unique links for frequented websites, complete with an admin dashboard and JWT authentication.</p>
@@ -117,10 +117,10 @@
 
     <!-- Shh... Easter Egg -->
     <div class="trash">
-      <img src="img/trash.png" alt="">
+      <img src="assets/trash.png" alt="">
     </div>
     <div class="trash" id="trash-front">
-      <img src="img/trash-front.png" alt="">
+      <img src="assets/trash-front.png" alt="">
     </div>
   </div>
   <script>
