--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,8 @@
   <div id="page">
 
     <div id="wrapper">
-      <div id="console-selector" class="nonInteractiveMode"> <!-- JavaScript Selector -->
-        <div class="console">
-          <div id="commands"></div> <!-- JavaScript Selector -->
-        </div>
-      </div>
-
+      <div id="console-selector" class="nonInteractiveMode"></div> <!-- JavaScript Selector -->
+      
       <div id="page-wrap">
         <div class="container" id="container">
           <div class="content" id="content">
@@ -93,7 +89,7 @@
                 </div>
               </div>
             </div>
-            <div id="resume-wrapper"></div> <!-- JavaScript Selector -->
+            <div id="resume-selector"></div> <!-- JavaScript Selector -->
           </div>
           <footer>
             <div class="grid">
