--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <title>John Sylvain &#8226; Software Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="My name is John Sylvain and I love to develop websites that are aesthetically pleasing and technically balanced.">
+  <meta name="description" content="I am a software engineer focused on creating performant JavaScript web applications and developer tools.">
   <meta name="keywords" content="John Sylvain, web development,html,css,javascript,web design,purdue,angular,nodejs,react,redux,fullstack,front end">
   <meta name="author" content="John Sylvain">
   <link rel="icon" href="assets/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Ubuntu+Mono:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700|Karla:400,500,700" rel="stylesheet">
 </head>
 <body>
   <div id="wrapper">
     <div id="console-selector"></div> <!-- JavaScript Selector -->
-    
+
     <div id="page-wrap">
       <div class="container" id="container-selector">
         <div class="content" id="content">
@@ -22,22 +22,18 @@
               <h1>John Sylvain</h1>
               <p>Software Engineer</p>
             </div>
-            <div>
-              <!-- JavaScript Selector -->
-              <a href="#/resume" id="toggle-interactive" class="toggle-btn"></a>
-            </div>
+            <!-- JavaScript Selector -->
+            <a href="#/resume" id="toggle-interactive" class="toggle-btn"></a>
           </header>
           <section id="landing-wrapper">
-            
+
             <div class="section about">
-              <h2>About</h2>
-              <p>I am a Software Engineer at <a href="https://rocketmiles.com">Rocketmiles</a> and a recent graduate of Purdue University. In the past, I have worked for <a href="http://usaa.com" target="_blank">USAA</a> and <a href="http://blastradius.com" target="_blank">Blast Radius</a>. I design and develop web applications that are simple and fun to use.</p>
+              <p>I am a passionate software engineer focused on creating performant JavaScript web applications and developer tools. Currently, I develop impactful UIs for large scale consumer web products at <a href="https://rocketmiles.com" target="_blank">Rocketmiles</a>.</p>
               <p class="mobile-hide">If you would like to learn more about me and my experience, feel free to check out my <a href="#/resume" class="toggle-btn">interactive resume</a>, or download <a href="https://johnsylvain.me/resume.pdf" target="_blank">a PDF</a>.</p>
               <p class="mobile-show">If you would like to learn more about me and my experience, feel free to check out my  <a href="https://johnsylvain.me/resume.pdf" target="_blank">resume</a>.</p>
             </div>
 
             <div class="section">
-              <h2>Projects</h2>
               <div class="projects">
 
                 <div class="project">
@@ -102,7 +98,7 @@
   <div class="trash">
     <img src="assets/trash.png" alt="">
   </div>
-  <div class="trash" id="trash-front">
+  <div class="trash trash__front">
     <img src="assets/trash-front.png" alt="">
   </div>
   <script>
