clean up assets and prep for netlify

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,7 @@
 
             <div class="section about">
               <p>I am a passionate software engineer focused on creating performant JavaScript web applications and developer tools. Currently, I develop impactful UIs for large scale consumer web products at <a href="https://rocketmiles.com" target="_blank">Rocketmiles</a>.</p>
-              <p class="mobile-hide">If you would like to learn more about me and my experience, feel free to check out my <a href="#/resume" class="toggle-btn">interactive resume</a>, or download <a href="https://johnsylvain.me/resume.pdf" target="_blank">a PDF</a>.</p>
-              <p class="mobile-show">If you would like to learn more about me and my experience, feel free to check out my  <a href="https://johnsylvain.me/resume.pdf" target="_blank">resume</a>.</p>
+              <p class="mobile-hide">If you would like to learn more about me and my experience, feel free to check out my <a href="#/resume" class="toggle-btn">interactive resume</a>.</p>
             </div>
 
             <div class="section">
