--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,15 @@
                   </div>
                 </div>
 
+                <div class="project">
+                  <img src="./assets/streamit.svg" alt="" class="project__image"/>
+                  <div class="project__caption">
+                    <h3 class="project__title">Streamit</h3>
+                    <p class="project__description">Streamit is a PWA </p>
+                    <a href="http://github.com/johnsylvain/url-shortener-node/" target="_blank" class="project__link">GitHub</a>
+                  </div>
+                </div>
+
               </div>
             </div>
           </section>
