add masonry layout

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
             <p>Software Engineer</p>
           </div>
           <nav class="nav mobile-hide">
-            <a href="#/" class="active">Porfolio</a>
-            <a href="#/resume">Resume</a>
+            <a href="#/" class="active round-link">Porfolio</a>
+            <a href="#/resume" class="round-link">Resume</a>
           </nav>
         </header>
       </div>
@@ -33,8 +33,8 @@
 
 
       <div class="item span-row hide-interactive">
-        <div class="about">
-          <h3>Hello! 👋</h3>
+        <div class="content">
+          <h3>Hey! 👋</h3>
           <p>
             I'm John, a passionate software engineer focused on creating performant JavaScript
             web applications and developer tools.
@@ -46,59 +46,97 @@
         </div>
       </div>
 
-      <!-- <div class="item hide-interactive">
-        <h3>Connect</h3>
-        <p><a href="https://github.com/johnsylvain" target="_blank">github / johnsylvain</a></p>
-        <p><a href="https://linkedin.com/in/johnsylvain" target="_blank">linkedin / johnsylvain</a></p>
-      </div> -->
-
       <div class="item hide-interactive">
-        <div class="project">
-          <h3 class="project__title">PlaceMorty</h3>
-          <p class="project__description">PlaceMorty provides quick access to placeholder images via AWS S3 storage, Redis caching, and an admin dashboard for curation.</p>
-          <div class="project__links">
-            <a href="https://placemorty.us" target="_blank">Demo</a>
-            <a href="http://github.com/johnsylvain/placemorty/" target="_blank">GitHub</a>
-          </div>
+        <div class="content">
+          <h3>
+            <span class="badge">3</span>
+            <span>Web Apps</span>
+          </h3>
+          <ul class="project-list">
+            <li>
+              <a href="https://github.com/johnsylvain/streamit" target="_blank">
+                <span class="project-list__title">Streamit</span>
+                <span class="project-list__subtitle">Reddit video streamer</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/johnsylvain/placemorty/" target="_blank">
+                <span class="project-list__title">PlaceMorty</span>
+                <span class="project-list__subtitle">Placeholder image generator</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/johnsylvain/url-shortener-node/" target="_blank">
+                <span class="project-list__title">johnsylva.in</span>
+                <span class="project-list__subtitle">Personal URL shortener</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
 
-      <div class="item hide-interactive">
-        <div class="project">
-          <h3 class="project__title">Pagine 📄</h3>
-          <p class="project__description">Pagine is a system that makes it easy to generate websites directly in the browser with no need for compiling.</p>
-          <div class="project__links">
-            <a href="https://johnsylvain.github.io/pagine" class="mobile-hide-link" target="_blank">Website</a>
-            <a href="http://github.com/johnsylvain/pagine/" target="_blank">GitHub</a>
-          </div>
+      <div class="item span-2-vertical hide-interactive">
+        <div class="content">
+          <h3>
+            <span class="badge">4</span>
+            <span>Open Source</span>
+          </h3>
+          <ul class="project-list">
+            <li>
+              <a href="https://github.com/johnsylvain/pagine" target="_blank">
+                <span class="project-list__title">pagine</span>
+                <span class="project-list__subtitle">Client-side website generator</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/johnsylvain/frecent/" target="_blank">
+                <span class="project-list__title">frecent</span>
+                <span class="project-list__subtitle">Object ranking algorithm</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/johnsylvain/system.css/" target="_blank">
+                <span class="project-list__title">system.css</span>
+                <span class="project-list__subtitle">Minimal CSS framework</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/johnsylvain/object-path-resolve/" target="_blank">
+                <span class="project-list__title">object-path-resolve</span>
+                <span class="project-list__subtitle">Tiny object resolver utility</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
 
-      <div class="item hide-interactive">
-        <div class="project">
-          <h3 class="project__title">Shower Thoughts Newtab 💡</h3>
-          <p class="project__description">This Chrome Extension creates a fun newtab page, leveraging Chrome storage for caching reddit data and storing user options.</p>
-          <div class="project__links">
-            <a href="https://chrome.google.com/webstore/detail/reddit-rshowerthoughts-ne/pcmdclajhocfphjlgbhniglijghlmlfg?hl=en-US&gl=US" target="_blank">Download</a>
-            <a href="http://github.com/johnsylvain/reddit-showerthoughts-newtab/" target="_blank">GitHub</a>
-          </div>
+      <div class="item span-2-vertical hide-interactive">
+        <div class="content">
+          <h3>
+            <span class="badge">1</span>
+            <span>Chrome Extensions</span>
+          </h3>
+          <ul class="project-list">
+            <li>
+              <a href="https://github.com/johnsylvain/reddit-showerthoughts-newtab" target="_blank">
+                <span class="project-list__title">Showerthoughts Newtab</span>
+                <span class="project-list__subtitle">Newtab replacement</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-
-      <div class="item hide-interactive">
-        <div class="project">
-          <h3 class="project__title">Personal URL Shortener 🔗</h3>
-          <p class="project__description">This MERN webapp generates unique links for frequented websites, complete with an admin dashboard and JWT authentication.</p>
-          <div class="project__links">
-            <a href="http://github.com/johnsylvain/url-shortener-node/" target="_blank">GitHub</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    </div> 
 
     <footer>
       <div class="container">
-        &copy; John Sylvain <span id="date-selector"></span>
+        <div class="copyright">
+          &copy; John Sylvain <span id="date-selector"></span>
+        </div>
+        <div>
+          <a href="https://github.com/johnsylvain" class="round-link">GitHub</a>
+          <a href="https://linkedin.com/in/johnsylvain" class="round-link">LinkedIn</a>
+        </div>
       </div>
     </footer>
   </div>
