fix crash animation

--- a/src/index.html
+++ b/src/index.html
@@ -113,14 +113,20 @@
       <div class="item span-2-vertical hide-interactive">
         <div class="content">
           <h3>
-            <span class="badge">1</span>
+            <span class="badge">2</span>
             <span>Chrome Extensions</span>
           </h3>
           <ul class="project-list">
             <li>
-              <a href="https://github.com/johnsylvain/reddit-showerthoughts-newtab" target="_blank">
+              <a href="https://chrome.google.com/webstore/detail/reddit-rshowerthoughts-ne/pcmdclajhocfphjlgbhniglijghlmlfg" target="_blank">
                 <span class="project-list__title">Showerthoughts Newtab</span>
                 <span class="project-list__subtitle">Newtab replacement</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://chrome.google.com/webstore/detail/im-feeling-lucky/nibhmcokabkgmcgifpepmohpnfchpgda" target="_blank">
+                <span class="project-list__title">I'm Feeling Lucky</span>
+                <span class="project-list__subtitle">Improved IFL search</span>
               </a>
             </li>
           </ul>
@@ -134,8 +140,8 @@
           &copy; John Sylvain <span id="date-selector"></span>
         </div>
         <div>
-          <a href="https://github.com/johnsylvain" class="round-link">GitHub</a>
-          <a href="https://linkedin.com/in/johnsylvain" class="round-link">LinkedIn</a>
+          <a href="https://github.com/johnsylvain">GitHub</a>
+          <a href="https://linkedin.com/in/johnsylvain">LinkedIn</a>
         </div>
       </div>
     </footer>
