--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="John Sylvain, web development,html,css,javascript,web design,purdue,angular,nodejs,react,redux,fullstack,front end">
   <meta name="author" content="John Sylvain">
   <link rel="icon" href="assets/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400" rel="stylesheet" />
 </head>
 <body>
   <div class="wrap">
@@ -40,7 +40,7 @@
             web applications and developer tools.
           </p>
           <p>
-            Currently, I work at 
+            Currently, I create UIs for large-scale consumer web products at
             <a href="https://rocketmiles.com" class="link" target="_blank">Rocketmiles</a>.
           </p>
         </div>
@@ -52,23 +52,23 @@
             <span class="badge">3</span>
             <span>Web Apps</span>
           </h3>
-          <ul class="project-list">
+          <ul class="project">
             <li>
-              <a href="https://github.com/johnsylvain/streamit" target="_blank">
-                <span class="project-list__title">Streamit</span>
-                <span class="project-list__subtitle">Reddit video streamer</span>
+              <a href="https://streamit.space" target="_blank">
+                <span class="project__title">Streamit</span>
+                <span class="project__subtitle">Reddit video streamer</span>
               </a>
             </li>
             <li>
-              <a href="https://github.com/johnsylvain/placemorty/" target="_blank">
-                <span class="project-list__title">PlaceMorty</span>
-                <span class="project-list__subtitle">Placeholder image generator</span>
+              <a href="https://placemorty.us" target="_blank">
+                <span class="project__title">PlaceMorty</span>
+                <span class="project__subtitle">Placeholder image generator</span>
               </a>
             </li>
             <li>
-              <a href="https://github.com/johnsylvain/url-shortener-node/" target="_blank">
-                <span class="project-list__title">johnsylva.in</span>
-                <span class="project-list__subtitle">Personal URL shortener</span>
+              <a href="https://johnsylva.in" target="_blank">
+                <span class="project__title">johnsylva.in</span>
+                <span class="project__subtitle">Personal URL shortener</span>
               </a>
             </li>
           </ul>
@@ -81,29 +81,29 @@
             <span class="badge">4</span>
             <span>Open Source</span>
           </h3>
-          <ul class="project-list">
+          <ul class="project">
             <li>
               <a href="https://github.com/johnsylvain/pagine" target="_blank">
-                <span class="project-list__title">pagine</span>
-                <span class="project-list__subtitle">Client-side website generator</span>
+                <span class="project__title">pagine</span>
+                <span class="project__subtitle">Client-side website generator</span>
               </a>
             </li>
             <li>
               <a href="https://github.com/johnsylvain/frecent/" target="_blank">
-                <span class="project-list__title">frecent</span>
-                <span class="project-list__subtitle">Object ranking algorithm</span>
+                <span class="project__title">frecent</span>
+                <span class="project__subtitle">Object ranking algorithm</span>
               </a>
             </li>
             <li>
               <a href="https://github.com/johnsylvain/system.css/" target="_blank">
-                <span class="project-list__title">system.css</span>
-                <span class="project-list__subtitle">Minimal CSS framework</span>
+                <span class="project__title">system.css</span>
+                <span class="project__subtitle">Minimal CSS framework</span>
               </a>
             </li>
             <li>
               <a href="https://github.com/johnsylvain/object-path-resolve/" target="_blank">
-                <span class="project-list__title">object-path-resolve</span>
-                <span class="project-list__subtitle">Tiny object resolver utility</span>
+                <span class="project__title">object-path-resolve</span>
+                <span class="project__subtitle">Tiny object resolver utility</span>
               </a>
             </li>
           </ul>
@@ -113,20 +113,14 @@
       <div class="item span-2-vertical hide-interactive">
         <div class="content">
           <h3>
-            <span class="badge">2</span>
+            <span class="badge">1</span>
             <span>Chrome Extensions</span>
           </h3>
-          <ul class="project-list">
+          <ul class="project">
             <li>
               <a href="https://chrome.google.com/webstore/detail/reddit-rshowerthoughts-ne/pcmdclajhocfphjlgbhniglijghlmlfg" target="_blank">
-                <span class="project-list__title">Showerthoughts Newtab</span>
-                <span class="project-list__subtitle">Newtab replacement</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://chrome.google.com/webstore/detail/im-feeling-lucky/nibhmcokabkgmcgifpepmohpnfchpgda" target="_blank">
-                <span class="project-list__title">I'm Feeling Lucky</span>
-                <span class="project-list__subtitle">Improved IFL search</span>
+                <span class="project__title">Showerthoughts Newtab</span>
+                <span class="project__subtitle">Newtab replacement</span>
               </a>
             </li>
           </ul>
@@ -140,20 +134,16 @@
           &copy; John Sylvain <span id="date-selector"></span>
         </div>
         <div>
-          <a href="https://github.com/johnsylvain">GitHub</a>
-          <a href="https://linkedin.com/in/johnsylvain">LinkedIn</a>
+          <a href="https://github.com/johnsylvain" target="_blank">GitHub</a>
+          <a href="https://linkedin.com/in/johnsylvain" target="_blank">LinkedIn</a>
         </div>
       </div>
     </footer>
   </div>
 
   <!-- Shh... Easter Egg -->
-  <div class="trash">
-    <img src="assets/trash.png" alt="">
-  </div>
-  <div class="trash trash__front">
-    <img src="assets/trash-front.png" alt="">
-  </div>
+  <div class="trash"><img src="assets/trash.png" alt="" /></div>
+  <div class="trash trash__front"><img src="assets/trash-front.png" alt="" /></div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
