js and style clean up

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>John Sylvain &#8226; Software Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="I am a software engineer focused on creating performant JavaScript web applications and developer tools.">
-  <meta name="keywords" content="John Sylvain, web development,html,css,javascript,web design,purdue,angular,nodejs,react,redux,fullstack,front end">
+  <meta name="keywords" content="John Sylvain,web development,html,css,javascript,software,preact,nodejs,react,redux,fullstack,frontend">
   <meta name="author" content="John Sylvain">
   <link rel="icon" href="assets/favicon.png" />
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400" rel="stylesheet" />
@@ -39,7 +39,7 @@
             web applications and developer tools.
           </p>
           <p>
-            Currently, I create UIs for large-scale consumer web products at
+            Currently, I develop large-scale consumer web products at
             <a href="https://rocketmiles.com" class="link" target="_blank">Rocketmiles</a>.
           </p>
         </div>
@@ -125,12 +125,12 @@
           </ul>
         </div>
       </div>
-    </div> 
+    </div>
 
     <footer>
       <div class="container">
         <div class="copyright">
-          &copy; John Sylvain <span id="date-selector"></span>
+          &copy; John Sylvain <script>document.write(new Date().getFullYear())</script>
         </div>
         <div>
           <a href="https://github.com/johnsylvain" target="_blank">GitHub</a>
@@ -151,7 +151,7 @@
 
     ga('create', 'UA-60696638-3', 'auto');
     ga('send', 'pageview');
-  </script> 
+  </script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <script src="./js/app.js"></script>
 </body>
